[project]
name = "radian"
platforms = ["osx-arm64"]
requires-python = ">= 3.11"
scripts = { radian-main = "radian:main" }
version = "0.1.0"

[dependencies]
rchitect = ">=0.4.7,<0.5"
setuptools = ">=78.1.1,<79"
pygments = ">=2.19.1,<3"
prompt_toolkit = ">=3.0.51,<4"



[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
